--- a/config/charybdis.conf
+++ b/config/charybdis.conf
@@ -1,18 +1,20 @@
-CONFIG_BT_LL_SW_LLCP_LEGACY=y
-
-CONFIG_BT_PERIPHERAL_PREF_MAX_INT=9
-CONFIG_BT_PERIPHERAL_PREF_LATENCY=16
-CONFIG_BT_BUF_ACL_TX_COUNT=32
-CONFIG_BT_L2CAP_TX_BUF_COUNT=32
-
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+CONFIG_ZMK_BATTERY_REPORT_INTERVAL=60
+CONFIG_ZMK_KEYBOARD_NAME="V&Z-Charydbis"
 
-# 启用键盘RGB功能
-# CONFIG_ZMK_RGB_UNDERGLOW=y
-# CONFIG_WS2812_STRIP=y
-# CONFIG_ZMK_RGB_UNDERGLOW_ON_START=y
-# CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=3
+CONFIG_ZMK_RGB_UNDERGLOW=n
+CONFIG_ZMK_BLE=y
 
+CONFIG_BT_PERIPHERAL_PREF_MIN_INT=6
+CONFIG_BT_PERIPHERAL_PREF_MAX_INT=12
+CONFIG_BT_PERIPHERAL_PREF_LATENCY=0
+CONFIG_BT_PERIPHERAL_PREF_TIMEOUT=400
 
+CONFIG_BT_MAX_CONN=5
+CONFIG_BT_MAX_PAIRED=5
+CONFIG_ZMK_BLE_PASSKEY_ENTRY=y
 
+CONFIG_ZMK_POINTING=y
 
+#CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=12
+#CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=12
